{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 136,
  "lineage": "19b906ad-fae8-8b2a-c57c-8756a5e702a6",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:security-group/sg-022ac53329156a710",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022ac53329156a710",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "doc-ingestion-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "067614922044",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "id": "sg-022ac53329156a710",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:security-group/sg-0b0ebd9b880ed49ad",
            "description": "ECS tasks security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS outbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0b0ebd9b880ed49ad",
            "ingress": [],
            "name": "doc-ingestion-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "067614922044",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "id": "sg-0b0ebd9b880ed49ad",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cab68b5c9b2595a6",
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:elastic-ip/eipalloc-0cab68b5c9b2595a6",
            "association_id": "eipassoc-07a6b7922af47e38d",
            "domain": "vpc",
            "id": "eipalloc-0cab68b5c9b2595a6",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-002f9aa64278c0f2e",
            "private_dns": "ip-10-0-1-51.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.51",
            "public_dns": "ec2-52-65-195-78.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.65.195.78",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "doc-ingestion-dev-nat-eip"
            },
            "tags_all": {
              "Name": "doc-ingestion-dev-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:internet-gateway/igw-033ba3fd3f54acffb",
            "id": "igw-033ba3fd3f54acffb",
            "owner_id": "067614922044",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "doc-ingestion-dev-igw"
            },
            "tags_all": {
              "Name": "doc-ingestion-dev-igw"
            },
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cab68b5c9b2595a6",
            "association_id": "eipassoc-07a6b7922af47e38d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-062a58c1f604ef1b1",
            "network_interface_id": "eni-002f9aa64278c0f2e",
            "private_ip": "10.0.1.51",
            "public_ip": "52.65.195.78",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00b1440d5a2d1f2ad",
            "tags": {
              "Name": "doc-ingestion-dev-nat"
            },
            "tags_all": {
              "Name": "doc-ingestion-dev-nat"
            },
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012587246caecc9351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-062a58c1f604ef1b1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-012587246caecc935",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-012587246caecc935"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-033ba3fd3f54acffb",
            "id": "r-rtb-07c940c584e9e9a6d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07c940c584e9e9a6d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07c940c584e9e9a6d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:route-table/rtb-012587246caecc935",
            "id": "rtb-012587246caecc935",
            "owner_id": "067614922044",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-062a58c1f604ef1b1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "doc-ingestion-dev-rt-private"
            },
            "tags_all": {
              "Name": "doc-ingestion-dev-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "id": "rtb-012587246caecc935",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:route-table/rtb-07c940c584e9e9a6d",
            "id": "rtb-07c940c584e9e9a6d",
            "owner_id": "067614922044",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033ba3fd3f54acffb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "doc-ingestion-dev-rt-public"
            },
            "tags_all": {
              "Name": "doc-ingestion-dev-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "id": "rtb-07c940c584e9e9a6d",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e1155fd0fcb3870",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-012587246caecc935",
            "subnet_id": "subnet-0a5c7ca5952021834"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040cc6c144dc40137",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-012587246caecc935",
            "subnet_id": "subnet-02dea23ee1239b97f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0569d5adaf5cd48a0",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07c940c584e9e9a6d",
            "subnet_id": "subnet-00b1440d5a2d1f2ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057090e4a940b0ad0",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07c940c584e9e9a6d",
            "subnet_id": "subnet-0d409955bbea864d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:subnet/subnet-0a5c7ca5952021834",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5c7ca5952021834",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067614922044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "doc-ingestion-dev-private-0",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "doc-ingestion-dev-private-0",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "id": "subnet-0a5c7ca5952021834",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:subnet/subnet-02dea23ee1239b97f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dea23ee1239b97f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067614922044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "doc-ingestion-dev-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "doc-ingestion-dev-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "id": "subnet-02dea23ee1239b97f",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:subnet/subnet-00b1440d5a2d1f2ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1440d5a2d1f2ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "067614922044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "doc-ingestion-dev-public-0",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "doc-ingestion-dev-public-0",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "id": "subnet-00b1440d5a2d1f2ad",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:subnet/subnet-0d409955bbea864d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d409955bbea864d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "067614922044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "doc-ingestion-dev-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "doc-ingestion-dev-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d6af886c8a3eb584"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "id": "subnet-0d409955bbea864d7",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:067614922044:vpc/vpc-0d6af886c8a3eb584",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f81c0efff31e7026",
            "default_route_table_id": "rtb-0df87ac9f3a613b1e",
            "default_security_group_id": "sg-0c48aefb5553fdd5d",
            "dhcp_options_id": "dopt-0beaa21753030f018",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6af886c8a3eb584",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df87ac9f3a613b1e",
            "owner_id": "067614922044",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "doc-ingestion-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "doc-ingestion-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067614922044",
            "id": "vpc-0d6af886c8a3eb584",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}